# track-analyser

./: .gitignore  AGENTS.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
.github/workflows/: python-package-conda.yml
scripts/: make_tiny_click.py
src/track_analyser/: cli.py  features.py  harmony.py  io.py  pipeline.py  report.py  stereo.py  tempo.py  utils.py
src/track_analyser/analysis/: __init__.py  beats.py  harmonic.py  loudness.py  structure.py
src/track_analyser/rendering/: outputs.py
tests/: conftest.py  test_cli.py  test_features.py  test_harmony.py  test_io.py  test_loudness.py  test_rendering_outputs.py  test_stereo.py  test_structure.py  test_tempo.py
track_analyser/: __init__.py  cli.py  utils.py
track_analyser/analysis/: beats.py  harmonic.py  loudness.py  stems.py  structure.py
track_analyser/rendering/: outputs.py
