[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "track-analyser"
version = "0.1.0"
description = "Deterministic audio track analysis toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI Automation"}]
dependencies = [
    "numpy==1.26.4",
    "scipy==1.11.4",
    "librosa==0.10.1",
    "resampy==0.4.2",
    "soundfile==0.12.1",
    "pyloudnorm==0.1.1",
    "pandas==2.1.4",
    "matplotlib==3.8.2",
    "tqdm==4.66.1",
    "rich==13.7.0",
    "click==8.1.7",
    "mido==1.3.0",
]

[project.optional-dependencies]
madmom = ["madmom==0.16.1"]
stems = ["torch==2.1.2", "demucs==4.0.0"]

[project.scripts]
track-analyser = "track_analyser.cli:main"

[tool.setuptools.packages.find]
include = ["track_analyser*"]
